--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="https://web-sdk.sandbox.ozforensics.com/plugin/ozliveness.css" />
-  <script src="https://web-sdk.sandbox.ozforensics.com/plugin_liveness.php?lang=en"></script>
+  <script src="https://web-sdk.sandbox.ozforensics.com/plugin_liveness.php?lang=en" defer></script>
 </head>
 
 <body>
